tests/purs/failing/TypeSynonyms10.out
Error found:
in module [33mMain[0m
at tests/purs/failing/TypeSynonyms10.purs:8:19 - 8:23 (line 8, column 19 - line 8, column 23)

  Could not match kind
  [33m                        [0m
  [33m  (Type -> Type) -> Type[0m
  [33m                        [0m
  with kind
  [33m      [0m
  [33m  Type[0m
  [33m      [0m

while checking that type [33mNaturalTransformation Array[0m
  has kind [33mType[0m
while inferring the kind of [33mF (NaturalTransformation Array)[0m
in type constructor [33mN[0m

See https://github.com/purescript/documentation/blob/master/errors/KindsDoNotUnify.md for more information,
or to contribute content related to this error.

